--- a/index.html
+++ b/index.html
@@ -1,9 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
+    <meta />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>si-lucjan-klawender-projekt-2</title>
   </head>
-  <body></body>
+  <body>
+    <div>
+      <img src="" alt="" />
+      <div class="left">
+        <button><img src="" alt="" /></button>
+        <button><img src="" alt="" /></button>
+        <button><img src="" alt="" /></button>
+      </div>
+      <div>
+        <button><img src="" alt="" /></button>
+        <button><img src="" alt="" /></button>
+        <button><img src="" alt="" /></button>
+      </div>
+    </div>
+    <main>
+      <div class="user-bar">
+        <div class="user">
+          <img src="" alt="" />
+          <select name="users" id="idk"></select>
+        </div>
+        <h1>lorem</h1>
+        <span>Lorem ipsum dolor sit amet consectetur </span>
+        <div class="serch">
+          <img src="" alt="" />
+          <input type="text" />
+        </div>
+        <span>Lorem ipsum dolor sit amet</span>
+        <div class="content">
+          <button><img src="" alt="" /></button>
+          <button><img src="" alt="" /></button>
+          <button><img src="" alt="" /></button>
+          <button><img src="" alt="" /></button>
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
