--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="right-top.css" />
+    <link rel="stylesheet" href="right-bottom.css" />
+    <link rel="stylesheet" href="left.css" />
     <meta />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>si-lucjan-klawender-projekt-2</title>
   </head>
   <body>
-    <div>
+    <div class="left">
       <img src="" alt="" />
-      <div class="left">
+      <div class="left1">
         <button><img src="" alt="" /></button>
         <button><img src="" alt="" /></button>
         <button><img src="" alt="" /></button>
       </div>
-      <div>
+      <div class="left2">
         <button><img src="" alt="" /></button>
         <button><img src="" alt="" /></button>
         <button><img src="" alt="" /></button>
