--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link
+      rel="stylesheet"
+      href="https://necolas.github.io/normalize.css/7.0.0/normalize.css "
+    />
     <link rel="stylesheet" href="right-top.css" />
     <link rel="stylesheet" href="right-bottom.css" />
     <link rel="stylesheet" href="left.css" />
@@ -10,16 +14,39 @@
   </head>
   <body>
     <div class="left">
-      <img src="" alt="" />
+      <div class="img">
+        <img src="photos/Zrzut ekranu 2025-12-15 130854.png" alt="" />
+      </div>
       <div class="left1">
-        <button><img src="" alt="" /></button>
-        <button><img src="" alt="" /></button>
-        <button><img src="" alt="" /></button>
+        <button class="one">
+          <img src="photos/Zrzut ekranu 2025-12-15 130942.png" alt="" />
+          <p>find</p>
+        </button>
+        <button>
+          <img src="photos/Zrzut ekranu 2025-12-15 131008.png" alt="" />
+          <p>my intents</p>
+        </button>
+        <button>
+          <img src="photos/Zrzut ekranu 2025-12-15 131021.png" alt="" />
+          <p>wallet</p>
+        </button>
+      </div>
+      <div class="space">
+        <p></p>
       </div>
       <div class="left2">
-        <button><img src="" alt="" /></button>
-        <button><img src="" alt="" /></button>
-        <button><img src="" alt="" /></button>
+        <button>
+          <img src="photos/Zrzut ekranu 2025-12-15 131042.png" alt="" />
+          <p>give feedback</p>
+        </button>
+        <button>
+          <img src="photos/Zrzut ekranu 2025-12-15 131057.png" alt="" />
+          <p>lern more</p>
+        </button>
+        <button>
+          <img src="photos/Zrzut ekranu 2025-12-15 131109.png" alt="" />
+          <p>setings</p>
+        </button>
       </div>
     </div>
     <main>
@@ -36,10 +63,18 @@
         </div>
         <span>Lorem ipsum dolor sit amet</span>
         <div class="content">
-          <button><img src="" alt="" /></button>
-          <button><img src="" alt="" /></button>
-          <button><img src="" alt="" /></button>
-          <button><img src="" alt="" /></button>
+          <button class="best">
+            <img src="photos/Zrzut ekranu 2025-12-15 131153.png" alt="" />
+          </button>
+          <button>
+            <img src="photos/Zrzut ekranu 2025-12-15 131218.png" alt="" />
+          </button>
+          <button>
+            <img src="photos/Zrzut ekranu 2025-12-15 131228.png" alt="" />
+          </button>
+          <button>
+            <img src="photos/Zrzut ekranu 2025-12-15 131241.png" alt="" />
+          </button>
         </div>
       </div>
     </main>
