--- a/index.html
+++ b/index.html
@@ -55,24 +55,28 @@
           <img src="" alt="" />
           <select name="users" id="idk"></select>
         </div>
-        <h1>lorem</h1>
-        <span>Lorem ipsum dolor sit amet consectetur </span>
+        <h1>Welcome to pulse, Jake</h1>
+        <span>What doo u need help with? </span>
         <div class="serch">
           <img src="" alt="" />
           <input type="text" />
         </div>
-        <span>Lorem ipsum dolor sit amet</span>
+        <span>please select a category</span>
         <div class="content">
           <button class="best">
+            <input type="checkbox" />
             <img src="photos/Zrzut ekranu 2025-12-15 131153.png" alt="" />
           </button>
           <button>
+            <input type="checkbox" />
             <img src="photos/Zrzut ekranu 2025-12-15 131218.png" alt="" />
           </button>
           <button>
+            <input type="checkbox" />
             <img src="photos/Zrzut ekranu 2025-12-15 131228.png" alt="" />
           </button>
           <button>
+            <input type="checkbox" />
             <img src="photos/Zrzut ekranu 2025-12-15 131241.png" alt="" />
           </button>
         </div>
