--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
     <main>
       <div class="user-bar">
         <div class="user">
-          <img src="" alt="" />
-          <select name="users" id="idk"></select>
+          <img src="photos/Zrzut ekranu 2025-12-15 131140.png" alt="" />
+          <select name="users" id="idk" value="Jake Daniels"></select>
         </div>
         <h1>Welcome to pulse, Jake</h1>
         <span>What doo u need help with? </span>
         <div class="serch">
-          <img src="" alt="" />
-          <input type="text" />
+          <img src="photos/Zrzut ekranu 2025-12-19 083326.png" alt="" />
+          <input type="text" placeholder="Ex. smart contact" />
         </div>
         <span>please select a category</span>
         <div class="content">
